# private-coachin-amm-prog

./: .gitignore  Anchor.toml  README.md  index.html  modules.html  package.json
.github/workflows/: main.yml
app/: constant.ts  core.ts  index.ts  types.ts  utils.ts
assets/: search.js
classes/: default.html
functions/: isAddress.html
lib-tests/: core.test.ts
programs/private-coaching-amm-prog/: Cargo.toml
programs/private-coaching-amm-prog/src/: lib.rs
programs/private-coaching-amm-prog/src/instructions/: create_pool.rs  mod.rs  swap.rs
programs/private-coaching-amm-prog/src/schema/: pool.rs
tests/: pretest.ts  private-coaching-amm-prog.test.ts  private-coaching-amm-prog.ts
types/: AnchorWallet.html  PoolData.html  PrivateCoachingAmmProgEvents.html  PrivateCoachingAmmProgIdl.html
variables/: DEFAULT_IDL.html  DEFAULT_PROGRAM_ID.html  DEFAULT_RPC_ENDPOINT.html  POOL_DISCRIMINATOR.html
